--- a/consoleline-sdk/test.html
+++ b/consoleline-sdk/test.html
@@ -7,7 +7,7 @@
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="./dist/consoleline.js"></script>
         <script>
-            console.log(new Conoleline({
+            console.log(new Consoleline({
                 themeColor: '#800080',
                 uploadBaseUrl: 'http://localhost:3000',
                 previewBaseUrl: 'http://localhost:4000',
